add_executable(
        cpp_sp
        main.cpp
        editor/Exporter.cpp
        editor/Canvas.cpp
        common/Point.cpp
        components/Line.cpp
        components/Rectangle.cpp
        components/Circle.cpp
        util/argument-parser.cpp
        util/string-util.cpp
        util/commands-parser.cpp
        util/supported-file-types.cpp
)
